--- a/Hackathon/Hackathon-Info.plist
+++ b/Hackathon/Hackathon-Info.plist
@@ -49,5 +49,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>signpainterhousebrush.ttf</string>
+	</array>
 </dict>
 </plist>
